did bunch of stuff

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,9 @@ version = "0.1.0"
 authors = ["Victor Bankowski <victor_bankowski@hotmail.com>"]
 
 [dependencies]
-image = "*"
 dungenon = { git = "https://github.com/VoxWave/dungenon-rs.git"}
+
+[dependencies.image]
+version = "0.7.0"
+default-features = false
+features = ["png_codec"]
