--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Victor Bankowski <victor_bankowski@hotmail.com>"]
 
 [dependencies]
 dungenon = { git = "https://github.com/VoxWave/dungenon-rs.git"}
+#dungenon = {path = "../dungenon-rs"}
 cast = "0.1.0"
 
 [dependencies.image]
